# DailyWord

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yaml  entrypoint.sh  pyproject.toml  renovate.json
.github/workflows/: main.yml
src/config/: __init__.py  settings.py  urls.py
src/config/templates/admin/: base_site.html
src/dailyword/: admin.py  admin_apps.py  admin_site.py  apps.py  middleware.py  models.py  rendering.py  storage.py  urls.py  views.py
src/dailyword/management/commands/: create_dictionary.py  generate_words.py
src/dailyword/migrations/: 0001_initial.py  0002_alter_word_unique_together_remove_word_slug.py
src/dailyword/services/: __init__.py  openrouter.py
tests/: conftest.py
tests/test_config/: test_home.py  test_static_root.py
tests/test_dailyword/: conftest.py  test_admin.py  test_commands.py  test_home_assistant_ingress.py  test_middleware.py  test_models.py  test_rendering.py  test_snapshot_extension.py  test_views.py
tests/test_dailyword/__snapshots__/: test_rendering.ambr
tests/test_dailyword/test_services/: test_openrouter.py
